# ICS507-Matrix-Multiplication-Project

./: .gitignore  CMakeLists.txt
doc/: BEGINNER_GUIDE.md  README.md
scripts/: generate_input.py  run_phase1.sh  run_phase1_mac.sh  run_phase1_windows.sh
src/: algorithms.hpp  io.cpp  io.hpp  main.cpp  matrix.cpp  matrix.hpp  par_matrix_mult.cpp  par_strassen.cpp  sequential.cpp  strassen.cpp  timer.hpp
